--- a/css/personal-portfolio-cd9df1.webflow.css
+++ b/css/personal-portfolio-cd9df1.webflow.css
@@ -1,3 +1,4 @@
+
 .navbar {
   position: fixed;
   left: 0px;
@@ -245,6 +246,7 @@
 }
 
 .topheadingpersonalmessage.phone.home {
+  visibility: hidden;
   width: 70%;
   margin-bottom: 0px;
   float: right;
